Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97600

qmllint segfaults on Connections

    XMLWordPrintable

Details

    • All
    • b503914a53564557ae9b098a0106fbbe6c6a5031 (qt/qtdeclarative/dev) a950f244673a8019a33088f81354a427bdd6712c (qt/qtdeclarative/6.2)

    Description

      Processing the following QML file with qmllint triggers a segmentation fault:

      import QtQuick
      
      Connections {
          function onClicked() {
          }
      }
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            max.goldstein Maximilian Goldstein
            c.lorquet Cyril Lorquet
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes